Fix: 리팩토링